@@ -1,10 +1,10 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin map::slippy n 0.4]
+[manpage_begin map::slippy n 0.5]
 [moddesc   {Mapping utilities}]
 [titledesc {Common code for slippy based map packages}]
 [require Tcl 8.4]
 [require Tk 8.4]
-[require map::slippy [opt 0.4]]
+[require map::slippy [opt 0.5]]
 [description]
 
 This package provides a number of methods doing things needed by all
@@ -110,6 +110,16 @@ level.
 Converts a pixel position at a zoom level ([arg point], a list
 containing zoom level, y, and x, in this order) to a tile identifier
 (list containing zoom level, row, and column) at that level.
+
+[call [cmd ::map::slippy] [method {fit geobox}] [arg canvdim] \
+     [arg geobox] [arg zmin] [arg zmax]]
+
+Calculates the zoom level (whithin the bounds [arg zmin] and
+[arg zmax]) such that [arg geobox] (a 4-element list containing the
+latitudes and longitudes lat0, lat1, lon0 and lon1 of a geo box,
+in this order) fits into a viewport given by [arg canvdim], a
+2-element list containing the width and height of the viewport, in
+this order.
 
 [list_end]
 
